# amman-python-401d6

./: .gitignore  README.md
bonus-content/: tree_iterator.py
bonus-content/visualizer/: pyproject.toml  visualizer.py
cheetsheet/: create_django_project.md
class-01/: DISCUSSION.md  README.md
class-01/demo/class-one-topics/: pyproject.toml
class-01/demo/class-one-topics/class_one_topics/: importer.py  topics.py
class-01/demo/guessing-game/: pyproject.toml
class-01/demo/guessing-game/guessing_game/: game.py
class-01/demo/guessing-game/tests/: test_guessing_game.py
class-02/: DISCUSSION.md  README.md
class-02/demo/recursion/: pyproject.toml
class-02/demo/recursion/recursion_package/: recursion_module.py
class-02/demo/recursion/tests/: test_recursion.py
class-02/warm-up/name-equals-main/: apple.py  banana.py  pyproject.toml
class-03/: DISCUSSION.md  README.md
class-03/warmup/importer/: README.md  pyproject.toml  root.py
class-03/warmup/importer/package_a/: module_a_a.py  module_a_b.py
class-03/warmup/importer/package_b/: module_b_a.py  module_b_b.py
class-03/warmup/importer/tests/: test_root.py
class-03/warmup/importer/tests/package_a/: test_module_a_a.py  test_module_a_b.py
class-03/warmup/importer/tests/package_b/: test_module_b_a.py  test_module_b_b.py
class-04/: DISCUSSION.md  README.md
class-04/demo/dog-pack/: README.md  pyproject.toml
class-04/demo/dog-pack/dog_pack/: dogs.py
class-04/demo/dog-pack/tests/: test_dogs.py
class-04/demos/cars/: pyproject.toml
class-04/demos/cars/cars/: cars.py
class-04/demos/cars/tests/: test_cars.py
class-05/: README.md  post_grad_guide.md
class-06/demo/counting-things-live/: counting_things.ipynb  pyproject.toml
class-11/demo/numpy-arrays/: hello_numpy.ipynb  img.ipynb  is_diagonal.ipynb  matrix.ipynb  numpy_expiriments.ipynb  pyproject.toml  student_scores.ipynb  vectorization.ipynb
class-11/demo/numpy-fun/: checker-board.ipynb  pyproject.toml
class-11/demo/numpy-fun/.ipynb_checkpoints/: checker-board-checkpoint.ipynb  numpy-fun-checkpoint.ipynb
class-11/demo/numpy-intro/: checker-board.ipynb  numpy-fun.ipynb  pyproject.toml
class-12/demo/broadcasting/: main.ipynb  pyproject.toml
class-12/demo/cereal/: cereal.ipynb  pyproject.toml
class-12/demo/cereal-live/: cereal.ipynb  chess.py  main.ipynb  pyproject.toml  test_chess.py
class-13/demo/salary/: anscombe.ipynb  pyproject.toml  salary.ipynb  salary_simple.ipynb
class-13/demo/salary-live/: pyproject.toml  regression.ipynb
class-14/demo/fun-with-seaborn/: fun_with_seaborn.ipynb  pyproject.toml
class-16/demo/text-classifier/: pyproject.toml  sentiment_analyzer.ipynb
class-16/demo_alt/dsa_bowlers/: bowler.py  linked_bowlers.py  list_bowlers.py  pyproject.toml  test_linked_bowlers.py  test_list_bowlers.py  test_tree_bowlers.py  tree_bowlers.py
class-17/demo/bayt/: bayt_json_data.json  file.html  jab_data.json  json_data.json  one_job.html  pyproject.toml  scrape.excalidraw
class-17/demo/bayt/bayt/: scraper.py
class-17/demo/bayt/tests/: test_bayt.py
class-17/demo/cf-courses/: pyproject.toml  scraper.py
class-18/demo/crypto/: corpus_loader.py  is_english_word.py  number_cipher.py  pyproject.toml
class-26/demo/django-things/: db.sqlite3  manage.py  pyproject.toml
class-26/demo/django-things/django_things_project/: asgi.py  settings.py  urls.py  wsgi.py
class-26/demo/django-things/templates/: about.html  base.html  home.html
class-26/demo/django-things/things/: tests.py  urls.py  views.py
class-27/demo/live-thing-rater/: .gitignore  manage.py  pyproject.toml
class-27/demo/live-thing-rater/templates/: home.html  thing_detail.html  thing_list.html
class-27/demo/live-thing-rater/templates/theme/: base.html
class-27/demo/live-thing-rater/thing_rater/: asgi.py  settings.py  urls.py  wsgi.py
class-27/demo/live-thing-rater/things/: models.py  tests.py  urls.py  views.py
class-27/demo/live-thing-rater/things/migrations/: 0001_initial.py  0002_thing_color.py
class-28/demos/things_demo/: lab_27_solution.md  pyproject.toml
class-28/demos/things_demo/things/: db.sqlite3  manage.py
class-28/demos/things_demo/things/templates/: base.html  thing_create.html  thing_delete.html  thing_detail.html  thing_list.html  thing_update.html
class-28/demos/things_demo/things/things/: asgi.py  settings.py  urls.py  wsgi.py
class-28/demos/things_demo/things/things_rater/: admin.py  apps.py  models.py  urls.py  views.py
class-28/demos/things_demo/things/things_rater/migrations/: 0001_initial.py
class-29/demo/snacks-x/: pyproject.toml
class-29/demo/snacks-x/config/: settings.py  urls.py
class-29/demo/snacks-x/snacks/: admin.py  apps.py  models.py  urls.py  views.py
class-29/demo/snacks-x/snacks/migrations/: 0001_initial.py
class-29/demo/snacks-x/templates/snacks/: snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
class-29/demo/things_djangox/: pyproject.toml
class-29/demo/things_djangox/accounts/: admin.py  forms.py  models.py
class-29/demo/things_djangox/accounts/migrations/: 0002_customuser_phone_number.py
class-29/demo/things_djangox/templates/: _base.html  components.html
class-29/demo/things_djangox/templates/pages/: home.html
class-32/demo/blogapi-permissions/: db.sqlite3  pyproject.toml
class-32/demo/blogapi-permissions/blog_project/: settings.py  urls.py  wsgi.py
class-32/demo/blogapi-permissions/posts/: permissions.py  serializers.py  tests.py  urls.py  views.py
class-32/demo/blogapi-permissions/posts/migrations/: 0001_initial.py
class-33/demo/live-authenticated-things/: db.sqlite3  pyproject.toml
class-33/demo/live-authenticated-things/accounts/: admin.py  forms.py  models.py
class-33/demo/live-authenticated-things/accounts/migrations/: 0001_initial.py
class-33/demo/live-authenticated-things/project/: settings.py  urls.py
class-33/demo/live-authenticated-things/things/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
class-33/demo/live-authenticated-things/things/migrations/: 0001_initial.py
(+403 files in other folders)
