[tool.poetry]
name = "numpy-fun"
version = "0.1.0"
description = ""
authors = ["Dario Thornhill <dariothornhill@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
