[tool.poetry]
name = "broadcasting"
version = "0.1.0"
description = ""
authors = ["Roger T. Huba <rogerhuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
jupyterlab = "^3.0.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
