[tool.poetry]
name = "salary"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.5"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
sklearn = "^0.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
