[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
scikit-learn = "^0.24.0"
numpy = "~1.18"
jupyterlab = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
