[tool.poetry]
name = "things_demo"
version = "0.1.0"
description = ""
authors = ["yahyaalbashar <v.salvatore7.gs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
